--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -10,7 +10,7 @@
 
 # The basic colors
 foreground              #CDD6F4
-background              #1E1E2E
+background              #11111B
 selection_foreground    #1E1E2E
 selection_background    #F5E0DC
 
@@ -78,3 +78,5 @@ color14 #94E2D5
 # white
 color7  #BAC2DE
 color15 #A6ADC8
+
+background_opacity 0.9
