--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -10,7 +10,7 @@
 
 # The basic colors
 foreground              #CDD6F4
-background              #11111B
+background              #001100
 selection_foreground    #1E1E2E
 selection_background    #F5E0DC
 
@@ -79,5 +79,7 @@ color14 #94E2D5
 color7  #BAC2DE
 color15 #A6ADC8
 
-background_opacity 0.9
+background_opacity 0.77
 map ctrl+shift+n new_os_window_with_cwd
+
+window_margin_width 20
