fix greenclip and add httpyac alias

--- a/.config/greenclip.toml
+++ b/.config/greenclip.toml
@@ -2,7 +2,7 @@
 [greenclip]
   blacklisted_applications = []
   enable_image_support = true
-  history_file = "/home/igortxra/.cache/greenclip.history"
+  history_file = "$HOME/.cache/greenclip.history"
   image_cache_directory = "/tmp/greenclip"
   max_history_length = 50
   max_selection_size_bytes = 0
