--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,5 +1,5 @@
 [Settings]
-gtk-theme-name=Everforest-Green-Dark
+gtk-theme-name=Dracula
 gtk-icon-theme-name=Dracula
 gtk-font-name=Cantarell 11
 gtk-cursor-theme-size=0
@@ -12,4 +12,4 @@ gtk-enable-input-feedback-sounds=1
 gtk-xft-antialias=1
 gtk-xft-hinting=1
 gtk-xft-hintstyle=hintfull
-gtk-cursor-theme-name=catppuccin-mocha-green-cursors
+gtk-cursor-theme-name=Dracula-cursors
