Black: update kitty

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,8 +1,9 @@
 # vim:ft=kitty
 
-background_opacity 0.77
+background_opacity 0.99
 map ctrl+shift+n new_os_window_with_cwd
 
-window_margin_width 20
+window_margin_width 0
+window_padding_width 20
 
-include dracula.conf
+include colors.conf
