--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
-gtk-theme-name=Dracula
-gtk-icon-theme-name=Dracula
-gtk-font-name=Cantarell 11
+gtk-theme-name=Material-Black-Plum-3.38
+gtk-icon-theme-name=Tela-circle-black-dark
+gtk-font-name=Liberation Mono 11
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
