Black: small improvements

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -49,7 +49,9 @@ shadow-exclude = [
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
   "_GTK_FRAME_EXTENTS@:c",
-  "class_g = 'Dunst'"
+  "class_g = 'Dunst'",
+  "QTILE_INTERNAL:32c = 1"
+
 ];
 
 # Specify a list of conditions of windows that should have no shadow painted over, such as a dock window.
