--- a/.config/flameshot/flameshot.ini
+++ b/.config/flameshot/flameshot.ini
@@ -1,10 +1,11 @@
 [General]
 contrastOpacity=188
-drawColor=#dc223c
+drawColor=#ccae49
 drawThickness=1
 filenamePattern=%F_%T
+savePath=/home/igortxra/Screenshots
+savePathFixed=false
 startupLaunch=true
 uiColor=#412f66
-
 uploadHistoryMax=23
 userColors=picker, #0000ff, #dc223c, #26e420
