--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,5 +1,5 @@
 #################################
-#             Shadows           #
+#       Shadows       #
 #################################
 
 
@@ -7,23 +7,23 @@
 # (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow,
 # unless explicitly requested using the wintypes option.
 #
-# shadow = false
+#shadow = false
 shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 7;
+shadow-radius = 10;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-# shadow-opacity = .75
+shadow-opacity = .6
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15
-shadow-offset-x = -7;
+shadow-offset-x = -8;
 
 # The top offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-y = -15
-shadow-offset-y = -7;
+shadow-offset-y = -8;
 
 # Red color value of shadow (0.0 - 1.0, defaults to 0).
 # shadow-red = 0
@@ -35,34 +35,20 @@ shadow-offset-y = -7;
 # shadow-blue = 0
 
 # Hex string color value of shadow (#000000 - #FFFFFF, defaults to #000000). This option will override options set shadow-(red/green/blue)
-# shadow-color = "#000000"
+shadow-color = "#111111"
 
 # Specify a list of conditions of windows that should have no shadow.
-#
-# examples:
-#   shadow-exclude = "n:e:Notification";
-#
 # shadow-exclude = []
 shadow-exclude = [
   "name = 'Notification'",
   "class_g = 'Conky'",
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
-  "_GTK_FRAME_EXTENTS@:c",
-  "class_g = 'Dunst'",
-  "QTILE_INTERNAL:32c = 1"
-
+  "QTILE_INTERNAL = 1"
 ];
 
 # Specify a list of conditions of windows that should have no shadow painted over, such as a dock window.
 # clip-shadow-above = []
-
-# Specify a X geometry that describes the region in which shadow should not
-# be painted in, such as a dock window region. Use
-#    shadow-exclude-reg = "x10+0+0"
-# for example, if the 10 pixels on the bottom of the screen should not have shadows painted on.
-#
-# shadow-exclude-reg = ""
 
 # Crop shadow of a window fully on a particular monitor to that monitor. This is
 # currently implemented using the X RandR extension.
@@ -70,7 +56,7 @@ shadow-exclude = [
 
 
 #################################
-#           Fading              #
+#       Fading        #
 #################################
 
 
@@ -80,52 +66,50 @@ shadow-exclude = [
 fading = true;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
-# fade-in-step = 0.028
-fade-in-step = 0.03;
+fade-in-step = 0.02
 
 # Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
-# fade-out-step = 0.03
-fade-out-step = 0.03;
+fade-out-step = 0.02
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
-# fade-delta = 10
+fade-delta = 4
 
 # Specify a list of conditions of windows that should not be faded.
 # fade-exclude = []
 
 # Do not fade on window open/close.
-# no-fading-openclose = false
+no-fading-openclose = true
 
 # Do not fade destroyed ARGB windows with WM frame. Workaround of bugs in Openbox, Fluxbox, etc.
 # no-fading-destroyed-argb = false
 
 
 #################################
-#   Transparency / Opacity      #
+#   Transparency / Opacity    #
 #################################
 
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 1.0;
+inactive-opacity = 0.9;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
-# frame-opacity = 1.0
-frame-opacity = 1.0;
+frame-opacity = 1.0
+#frame-opacity = 0.5;
 
 # Let inactive opacity set by -i override the '_NET_WM_WINDOW_OPACITY' values of windows.
-# inactive-opacity-override = true
+#inactive-opacity-override = true
 inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-# active-opacity = 1.0
+active-opacity = 0.95;
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
-inactive-dim = 0.2
+inactive-dim = 0
 
 # Specify a list of conditions of windows that should never be considered focused.
 # focus-exclude = []
-focus-exclude = [ "class_g = 'Cairo-clock'" ];
+# focus-exclude = [ "class_g = 'Cairo-clock'" ];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
 # inactive-dim-fixed = 1.0
@@ -135,52 +119,79 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # Note we don't make any guarantee about possible conflicts with other
 # programs that set '_NET_WM_WINDOW_OPACITY' on frame or client windows.
 # example:
-#    opacity-rule = [ "80:class_g = 'URxvt'" ];
-#
+#  opacity-rule = [ "80:class_g = 'URxvt'" ];
 opacity-rule = [
-  "90:class_g = 'Thunar'"
+  "100:fullscreen",
+  "100:QTILE_INTERNAL = 1"
 ]
 
-
 #################################
-#           Corners             #
+#       Corners       #
 #################################
 
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 10
+corner-radius = 15
+
+corner-radius-rules = [
+  "0:QTILE_INTERNAL = 1"
+]
 
 # Exclude conditions for rounded corners.
 rounded-corners-exclude = [
   "window_type = 'dock'",
-  "window_type = 'desktop'"
+  "window_type = 'desktop'",
+  "class_g = 'Dunst'"
 ];
 
 
 #################################
-#     Background-Blurring       #
+#   Background-Blurring     #
 #################################
 
-blur-background = true;
-blur-background-frame = true;
-blur-background-fixed = true;
-#blur-method = "dual_kawase";
-blur-strength = 2;
-blur-kern = "15,15,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,";
-blur-method = "kernel";
+
+# Parameters for background blurring, see the *BLUR* section for more information.
+blur-method = "dual_kawase"
+
+blur-strength = 5
+
+# Blur background of semi-transparent / ARGB windows.
+# Bad in performance, with driver-dependent behavior.
+# The name of the switch may change without prior notifications.
+#
+blur-background = true
+
+# Blur background of windows when the window frame is not opaque.
+# Implies:
+#  blur-background
+# Bad in performance, with driver-dependent behavior. The name may change.
+#
+blur-background-frame = false
+
+
+# Use fixed blur strength rather than adjusting according to window opacity.
+blur-background-fixed = false
+
+
+# Specify the blur convolution kernel, with the following format:
+# example:
+#   blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
+#
+# blur-kern = ""
+blur-kern = "3x3box";
+
 
 # Exclude conditions for background blur.
 # blur-background-exclude = []
 blur-background-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'",
-  "_GTK_FRAME_EXTENTS@:c",
-  "QTILE_INTERNAL:32c = 1"
+  "QTILE_INTERNAL = 1"
 ];
 
 #################################
-#       General Settings        #
+#     General Settings    #
 #################################
 
 # Enable remote control via D-Bus. See the man page for more details.
@@ -192,7 +203,7 @@ blur-background-exclude = [
 # Specify the backend to use: `xrender`, `glx`, `egl` or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
- backend = "glx"
+backend = "glx"
 # backend = "xrender";
 
 # Use higher precision during rendering, and apply dither when presenting the
@@ -208,7 +219,7 @@ vsync = true;
 # child that has 'WM_STATE') and mark them as active.
 #
 # mark-wmwin-focused = false
-mark-wmwin-focused = true;
+mark-wmwin-focused = false;
 
 # Mark override-redirect windows that doesn't have a child window with 'WM_STATE' focused.
 # mark-ovredir-focused = false
@@ -230,7 +241,7 @@ detect-client-opacity = true;
 # rather than listening to 'FocusIn'/'FocusOut' event. Might have more accuracy,
 # provided that the WM supports it.
 #
-# use-ewmh-active-win = false
+use-ewmh-active-win = true
 
 # Unredirect all windows if a full-screen opaque window is detected,
 # to maximize performance for full-screen windows. Known to cause flickering
@@ -280,7 +291,7 @@ detect-transient = true;
 # practically happened) and may not work with blur-background.
 # My tests show a 15% performance boost. Recommended.
 #
-glx-no-stencil = true;
+glx-no-stencil = true
 
 # GLX backend: Avoid rebinding pixmap on window damage.
 # Probably could improve performance on rapid window content changes,
@@ -369,42 +380,130 @@ log-level = "warn";
 # Window type settings
 #
 # 'WINDOW_TYPE' is one of the 15 window types defined in EWMH standard:
-#     "unknown", "desktop", "dock", "toolbar", "menu", "utility",
-#     "splash", "dialog", "normal", "dropdown_menu", "popup_menu",
-#     "tooltip", "notification", "combo", and "dnd".
+#   "unknown", "desktop", "dock", "toolbar", "menu", "utility",
+#   "splash", "dialog", "normal", "dropdown_menu", "popup_menu",
+#   "tooltip", "notification", "combo", and "dnd".
 #
 # Following per window-type options are available: ::
 #
 #   fade, shadow:::
-#     Controls window-type-specific shadow and fade settings.
+#   Controls window-type-specific shadow and fade settings.
 #
 #   opacity:::
-#     Controls default opacity of the window type.
+#   Controls default opacity of the window type.
 #
 #   focus:::
-#     Controls whether the window of this type is to be always considered focused.
-#     (By default, all window types except "normal" and "dialog" has this on.)
+#   Controls whether the window of this type is to be always considered focused.
+#   (By default, all window types except "normal" and "dialog" has this on.)
 #
 #   full-shadow:::
-#     Controls whether shadow is drawn under the parts of the window that you
-#     normally won't be able to see. Useful when the window has parts of it
-#     transparent, and you want shadows in those areas.
+#   Controls whether shadow is drawn under the parts of the window that you
+#   normally won't be able to see. Useful when the window has parts of it
+#   transparent, and you want shadows in those areas.
 #
 #   clip-shadow-above:::
-#     Controls whether shadows that would have been drawn above the window should
-#     be clipped. Useful for dock windows that should have no shadow painted on top.
+#   Controls whether shadows that would have been drawn above the window should
+#   be clipped. Useful for dock windows that should have no shadow painted on top.
 #
 #   redir-ignore:::
-#     Controls whether this type of windows should cause screen to become
-#     redirected again after been unredirected. If you have unredir-if-possible
-#     set, and doesn't want certain window to cause unnecessary screen redirection,
-#     you can set this to `true`.
+#   Controls whether this type of windows should cause screen to become
+#   redirected again after been unredirected. If you have unredir-if-possible
+#   set, and doesn't want certain window to cause unnecessary screen redirection,
+#   you can set this to `true`.
 #
 wintypes:
 {
   tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
   dock = { shadow = false; clip-shadow-above = true; }
   dnd = { shadow = false; }
-  popup_menu = { opacity = 0.8; }
+  popup_menu = { opacity = 0.8;}
   dropdown_menu = { opacity = 0.8; }
+  menu = { blur-background = false; }
 };
+
+#################################
+#     Animation Settings    #
+#################################
+
+animations = (
+  {
+    triggers = ["close"];
+    opacity = {
+      curve = "cubic-bezier(.75,0,.75,.9)";
+      duration = 0.15;
+      start = "window-raw-opacity-before";
+      end = 0;
+    };
+    blur-opacity = "opacity";
+    shadow-opacity = "opacity";
+    offset-x = "(1 - scale-x) / 2 * window-width";
+    offset-y = "(1 - scale-y) / 2 * window-height";
+    scale-x = {
+      curve = "cubic-bezier(.75,0,.75,.9)";
+      duration = 0.15;
+      start = 1;
+      end = 0.7;
+    };
+    scale-y = "scale-x";
+    shadow-scale-x = "scale-x";
+    shadow-scale-y = "scale-y";
+    shadow-offset-x = "offset-x";
+    shadow-offset-y = "offset-y";
+  },
+  {
+    triggers = ["open"];
+    opacity = {
+      curve = "cubic-bezier(.25,.1,.25,1)";
+      duration = 0.15;
+      start = 0;
+      end = "window-raw-opacity";
+    }
+    blur-opacity = "opacity";
+    shadow-opacity = "opacity";
+    offset-x = "(1 - scale-x) / 2 * window-width";
+    offset-y = "(1 - scale-y) / 2 * window-height";
+    scale-x = {
+      curve = "cubic-bezier(.25,.1,.25,1)";
+      duration = 0.15;
+      start = 0.7;
+      end = 1;
+    };
+    scale-y = "scale-x";
+    shadow-scale-x = "scale-x";
+    shadow-scale-y = "scale-y";
+    shadow-offset-x = "offset-x";
+    shadow-offset-y = "offset-y";
+  },
+  {
+    triggers = ["geometry"]
+    scale-x = {
+      curve = "cubic-bezier(.25,.1,.25,1)";
+      duration = 0.13;
+      start = "window-width-before / window-width";
+      end = 1;
+    }
+    scale-y = {
+      curve = "cubic-bezier(.25,.1,.25,1)";
+      duration = 0.13;
+      start = "window-height-before / window-height";
+      end = 1;
+    }
+    offset-x = {
+      curve = "cubic-bezier(.25,.1,.25,1)";
+      duration = 0.13;
+      start = "window-x-before - window-x";
+      end = 0;
+    }
+    offset-y = {
+      curve = "cubic-bezier(.25,.1,.25,1)";
+      duration = 0.13;
+      start = "window-y-before - window-y";
+      end = 0;
+    }
+
+    shadow-scale-x = "scale-x";
+    shadow-scale-y = "scale-y";
+    shadow-offset-x = "offset-x";
+    shadow-offset-y = "offset-y";
+  }
+)
