--- a/.config/flameshot/flameshot.ini
+++ b/.config/flameshot/flameshot.ini
@@ -1,9 +1,8 @@
 [General]
 contrastOpacity=188
-drawColor=#ccae49
+drawColor=#a380dc
 drawThickness=1
 filenamePattern=%F_%T
-savePath=/home/igortxra/Screenshots
 savePathFixed=false
 startupLaunch=true
 uiColor=#412f66
