--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -44,6 +44,7 @@ shadow-exclude = [
   "class_g = 'Conky'",
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
+  "class_g = 'Dunst'",
   "QTILE_INTERNAL = 1"
 ];
 
@@ -142,7 +143,8 @@ corner-radius-rules = [
 rounded-corners-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'",
-  "class_g = 'Dunst'"
+  "class_g = 'Dunst'",
+  "name = 'Peek'",
 ];
 
 
@@ -187,7 +189,9 @@ blur-kern = "3x3box";
 blur-background-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'",
-  "QTILE_INTERNAL = 1"
+  "QTILE_INTERNAL = 1",
+  "name = 'Peek'",
+  "class_g = 'Dunst'",
 ];
 
 #################################
@@ -291,7 +295,7 @@ detect-transient = true;
 # practically happened) and may not work with blur-background.
 # My tests show a 15% performance boost. Recommended.
 #
-glx-no-stencil = true
+# glx-no-stencil = true
 
 # GLX backend: Avoid rebinding pixmap on window damage.
 # Probably could improve performance on rapid window content changes,
