--- a/.local/share/applications/spotify.desktop
+++ b/.local/share/applications/spotify.desktop
@@ -3,7 +3,7 @@ Type=Application
 Name=Spotify
 GenericName=Spotify, but ads are auto muted
 Icon=spotify
-Exec=/bin/sh -c '$HOME/.local/bin/apps/spotify.sh'
+Exec=/bin/sh -c '$HOME/.local/bin/apps/spotify/spotify.sh'
 Categories="Music Player"
 Keywords=Music
 StartupWMClass=spotify
