--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,6 +2,7 @@
 
 background_opacity 0.80
 map ctrl+shift+n new_os_window_with_cwd
+map ctrl+shift+c copy_to_clipboard
 
 window_margin_width 0
 window_padding_width 20
