feat: add pywall and simplify some things

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,10 +1,15 @@
 # vim:ft=kitty
 
-background_opacity 0.80
 map ctrl+shift+n new_os_window_with_cwd
 map ctrl+shift+c copy_to_clipboard
 
 window_margin_width 0
 window_padding_width 20
 
-include colors.conf
+include ~/.cache/wal/colors-kitty.conf
+
+# background_opacity 0.90
+background_opacity 1.00
+
+color1       #ff0000
+color2       #26d84d
