--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -11,5 +11,4 @@ include ~/.cache/wal/colors-kitty.conf
 # background_opacity 0.90
 background_opacity 1.00
 
-color1       #ff0000
-color2       #26d84d
+color1       #aa3333
