--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -91,8 +91,7 @@ no-fading-openclose = true
 
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
-# inactive-opacity = 1
-inactive-opacity = 0.9;
+inactive-opacity = 1
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 frame-opacity = 1.0
@@ -103,7 +102,7 @@ frame-opacity = 1.0
 inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-active-opacity = 0.95;
+active-opacity = 1.0;
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
 inactive-dim = 0
@@ -123,7 +122,8 @@ inactive-dim = 0
 #  opacity-rule = [ "80:class_g = 'URxvt'" ];
 opacity-rule = [
   "100:fullscreen",
-  "100:QTILE_INTERNAL = 1"
+  "100:QTILE_INTERNAL = 1",
+  "100:class_g = 'qutebrowser'"
 ]
 
 #################################
