--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,6 +1,6 @@
 [Settings]
-gtk-theme-name=Material-Black-Plum-3.38
-gtk-icon-theme-name=Tela-circle-black-dark
+gtk-theme-name=Dracula
+gtk-icon-theme-name=Tela-circle-dracula
 gtk-font-name=Liberation Mono 11
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
@@ -11,5 +11,5 @@ gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=1
 gtk-xft-antialias=1
 gtk-xft-hinting=1
-gtk-xft-hintstyle=hintfull
+gtk-xft-hintstyle=hintmedium
 gtk-cursor-theme-name=Dracula-cursors
